# cyborg_ws

./: README.md
src/beginner_tutorial/: CMakeLists.txt  README.md  package.xml
src/beginner_tutorial/src/: keyboard_teleop.py  listenerImg.py  talker.py  talkerVelocity.py
src/robot_simulation/: LICENSE  README.md
src/robot_simulation/digitizer/: CMakeLists.txt  README.md  package.xml
src/robot_simulation/digitizer/launch/: gazebo.launch  spawn_platform.launch  spawn_robot.launch
src/robot_simulation/digitizer/models/mobile_robot_base/: mobile_robot_base.urdf  model.config  model.sdf
src/robot_simulation/digitizer/models/mobile_robot_base/materials/scripts/: mobile_robot_base.material
src/robot_simulation/digitizer/models/mobile_robot_base/meshes/: base_link.STL  left_front_wheel.STL  left_rear_wheel.STL  motors.STL  right_front_wheel.STL  right_rear_wheel.STL
src/robot_simulation/digitizer/models/platform/: model.config  model.sdf
src/robot_simulation/digitizer/models/platform/materials/scripts/: platform.material
src/robot_simulation/digitizer/models/platform/meshes/: base_link.STL  camera.STL  metals.STL  nuts.STL  wood.STL
src/robot_simulation/digitizer/src/: 10thOct.py  16thOct.py  17.thOct.py  18.1.py  18thOCt.py  28sept.py  30thMidNight.py  keyboard_teleop.py
src/robot_simulation/digitizer/submissions/: README.md
src/robot_simulation/digitizer/submissions/Suyash/: Movement.py  PathFinder.py  PathFinderNode.py
src/robot_simulation/digitizer/worlds/: scene.world
src/robot_simulation/drone_orbit/: CMakeLists.txt  README.md  package.xml
src/robot_simulation/drone_orbit/launch/: iarc_sea.launch  practice_arena.launch  practice_arena_with_drone.launch
src/robot_simulation/drone_orbit/src/: keyboard-teleop.py
src/robot_simulation/drone_orbit/world/: arena_sea.world  practice_arena.world
src/robot_simulation/line_follower/: CMakeLists.txt  README.md  package.xml
src/robot_simulation/line_follower/cfg/: LineParam.cfg
src/robot_simulation/line_follower/launch/: arena.launch
src/robot_simulation/line_follower/src/: Final_17sept.py  Keyboard_teleop2.0.py  Keyboard_teleop3.0.py  Keyboard_teleop4.5486.py  ListenerVelovity.py  basic.py  keyboard_teleop.py  listener.py  listenerImg.py  talker.py
src/robot_simulation/line_follower/world/: arena.world
