<package format="2">
  <name>digitizer</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for digitizer_platform</p>
    <p>This package contains configuration data, 3D models and launch files
for digitizer_platform robot</p>
  </description>
  <author>Arnab Paikaray</author>
  <maintainer email="arnabgudu.gs@gmail.com" />
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <export>
    <architecture_independent />
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>

  </export>
</package>
