<?xml version="1.0"?>
<package format="2">
  <name>line_follower</name>
  <version>0.0.0</version>
  <description>The line_follower package</description>

  <maintainer email="arnabgudu.gs@gmail.com">Arnab Paikaray</maintainer>
  <!-- track credits to YikeStone -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <export>
  </export>
</package>
